# Pytorch_CPlusPlus_Test

./: .gitattributes  CMakeLists.txt
include/: network.h
models/: lanes_segnet.pt
src/: main.cpp
